@@ -6,14 +6,14 @@ opj_server_CPPFLAGS = \
 @FCGI_CFLAGS@ \
 -I. \
 -I$(top_srcdir)/applications/jpip/libopenjpip \
--I$(top_builddir)/applications/jpip/libopenjpip
-#
-opj_server_CFLAGS = -DServer -DQUIT_SIGNAL=\"quitJPIP\"
+-I$(top_builddir)/applications/jpip/libopenjpip \
+-DServer \
+-DQUIT_SIGNAL=\"quitJPIP\"
 #
 opj_server_LDADD = $(top_builddir)/applications/jpip/libopenjpip/libopenjpip_server.la @FCGI_LIBS@ -lm
 #
-opj_server_SOURCES = \
-opj_server.c
+opj_server_SOURCES = opj_server.c
+
 #-------------
 opj_dec_server_CPPFLAGS = \
 -I. \
@@ -23,6 +23,7 @@ opj_dec_server_CPPFLAGS = \
 opj_dec_server_CFLAGS =
 opj_dec_server_LDADD = $(top_builddir)/applications/jpip/libopenjpip/libopenjpip_local.la
 opj_dec_server_SOURCES = opj_dec_server.c
+
 #-------------
 jpip_to_jp2_CPPFLAGS = \
 -I. \
@@ -32,6 +33,7 @@ jpip_to_jp2_CPPFLAGS = \
 jpip_to_jp2_CFLAGS =
 jpip_to_jp2_LDADD = $(top_builddir)/applications/jpip/libopenjpip/libopenjpip_local.la
 jpip_to_jp2_SOURCES = jpip_to_jp2.c
+
 #-------------
 jpip_to_j2k_CPPFLAGS = \
 -I. \
@@ -41,6 +43,7 @@ jpip_to_j2k_CPPFLAGS = \
 jpip_to_j2k_CFLAGS =
 jpip_to_j2k_LDADD = $(top_builddir)/applications/jpip/libopenjpip/libopenjpip_local.la
 jpip_to_j2k_SOURCES = jpip_to_j2k.c
+
 #-------------
 test_index_CPPFLAGS = \
 -I. \
@@ -50,6 +53,7 @@ test_index_CPPFLAGS = \
 test_index_CFLAGS =
 test_index_LDADD = $(top_builddir)/applications/jpip/libopenjpip/libopenjpip_local.la
 test_index_SOURCES = test_index.c
+
 #-------------
 install-data-hook:
 	@echo -e " (B)\t$(bindir)/opj_server$(EXEEXT)" >> $(top_builddir)/report.txt
