@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+November 16, 2011
+* [vincent] fix compilation of libopenjpip (libcurl dependency) and fix 'distcheck' rule
+
 October 21, 2011
 * [mickael] remove one obvious memory leak from test functions
 ! [kaori]   change -v option was renamed to -u, which is equivalent to -TP long option
